# MrDaebak

dinner_service/: DELIVERY_ROLES.md  FR-NFR.md  PROGRESS.md  README.md  docker-compose.yml  easy_orders  main.py  package-lock.json  package.json  pyproject.toml  start.bat  stop.bat
dinner_service/backend/: Dockerfile  app.py
dinner_service/backend/config/: gemini_menu_data.json  gemini_system_prompt.txt
dinner_service/backend/config/prompts/: checkout_ready.txt  ingredient_customization.txt  scheduling.txt  (+4 more)
dinner_service/backend/data/: ingredients_ko.json  menu_info.json  menu_ingredients.json  operation_config.json  staff_data.json
dinner_service/backend/routers/: admin.py  auth.py  cake.py  checkout.py  discount.py  events.py  ingredients.py  inquiries.py  menu.py  order.py  side_dishes.py  staff.py  voice.py  websocket.py
dinner_service/backend/services/: ai_client.py  database.py  discount_service.py  event_service.py  gemini_image_service.py  gemini_service.py  image_generation_service.py  ingredient_service.py  inquiry_service.py  login_service.py  menu_service.py  openai_audio_service.py  order_service.py  payment_service.py  side_dish_service.py  staff_service.py  stt_service.py  voice_analysis_service.py  websocket_manager.py
dinner_service/backend/tests/: test_inventory_menu_features.py
dinner_service/frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dinner_service/infra/caddy/: Caddyfile
dinner_service/scripts/: init.sql  manual_user_seed.sql  verify_password.py
(+194 files in other folders)
